catkin_ws/logs/iq_gnc/build.make.305.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:215:29: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  215 |   if(drone1_global_position.z > 0.5){
      |                             ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
